@@ -1,3 +1,10 @@
+2009-07-12  Donal K. Fellows  <dkf@users.sf.net>
+
+	* generic/tclOOCall.c (TclOOGetCallContext): [Bug 1895546]: Changed
+	* generic/tclOO.c (TclOOObjectCmdCore):	     the way that the cache is
+	managed so that when itcl does cunning things, those cunning things
+	can be cached properly.
+
 2009-07-11  Donal K. Fellows  <dkf@users.sf.net>
 
 	* doc/vwait.n: Substantially increased the discussion of issues and
